syntax = "proto3";

package api;

option go_package = "./protobuf";

import "google/api/annotations.proto";

service CBDC {
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) {
        option (google.api.http) = { post: "/v1/getBalance", body: "*" };
    }

    // CBDC Transaction
    rpc Tx(TxRequest) returns (TxResponse) {
        option (google.api.http) = { post: "/v1/tx", body: "*" };
    }

    // Deposit CBDC from UPI or Bank transfers
    rpc Fund(FundRequest) returns (FundResponse) {
        option (google.api.http) = { post: "/v1/fund", body: "*" };
    }

    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {
        option (google.api.http) = { post: "/v1/createAccount", body: "*" };
    }

    rpc Mint(MintRequest) returns (MintResponse) {}
}

message GetBalanceRequest {
    string account = 1;
}
message GetBalanceResponse {
    uint64 balance = 1;
}

message TxRequest {
    string from = 1;
    string to = 2;
    uint64 amount = 3;
}
message TxResponse {
    string tx_id = 1;
    string from = 2;
    string to = 3;
    uint64 amount = 4;
    bool success = 5;
    string message = 6;
}

message FundRequest {
    string account = 1;
    uint64 amount = 2;
    string upi_id = 3;
    string bank_name = 4;
    string bank_account_number = 5;
}
message FundResponse {
    string tx_id = 1;
    string account = 2;
    uint64 amount = 3;
    bool success = 4;
    string message = 5;
}


message CreateAccountRequest {
    string account = 1;
}
message CreateAccountResponse {
    string account = 1;
    bool success = 2;
    string message = 3;
}

message MintRequest {
    string account = 1;
    uint64 amount = 2;
}
message MintResponse {
    string tx_id = 1;
    string account = 2;
    uint64 amount = 3;
    bool success = 4;
    string message = 5;
}